* Fixed bottom margin in menu of steelblue theme. This caused a   scrollbar to appear too early.

--- a/themes/steelblue/styles/menu.css
+++ b/themes/steelblue/styles/menu.css
@@ -8,7 +8,7 @@ body
 #mainMenu
 {
   position: relative;
-  margin: 8px 0px 20px 0px;
+  margin: 8px 0px 0px 0px;
   padding: 0px;
   color: #414141;
   width: 192px;
